z-index to logo, to solve mobile overlap issue

--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -63,6 +63,7 @@ header .content{
     font-weight: bolder;
     font-size: 23px;
     text-decoration: none;
+    z-index: 10;
 }
 
 #Slogo span{
